# artella-plugins-getdependencies

./: .gitattributes  MANIFEST.in  README.md  README.rst  artella-plugin.json  requirements.txt  setup.cfg
artella/plugins/: __init__.py
artella/plugins/getdependencies/: __version__.py  _version.py  artella-plugin.json  getdependencies.py  widgets.py
artella/plugins/getdependencies/maya/: getdependencies.py
artella/plugins/getdependencies/widgets/: listdialog.py  outputdialog.py
tests/: test_plugin.py
